<resources>
    <string name="app_name">MangoRead</string>

    <!--FEATURE AUTH-->
    <string name="sign_in">Войти</string>
    <string name="register">Регистрация</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_account">У вас еще нет аккаунта? <font fgcolor='#000000'>Регистрация</font></string>
    <string name="title_sign_in">Вход</string>
    <string name="title_sign_up">Регистрация</string>
    <string name="have_account">У вас уже есть аккаунт? Войти</string>
    <string name="confirm_password">Confirm password</string>
    <string name="nickname">Nickname</string>
    <string name="add_photo">ДОБАВИТЬ ФОТО</string>


</resources>